galette (0.7.5-1) unstable; urgency=low

  * New upstream release.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 21 Aug 2013 11:11:05 +0200

galette (0.7.4.5-1) unstable; urgency=low

  * New upstream release.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 10 Jul 2013 23:04:42 +0200

galette (0.7.4.2-1) unstable; urgency=low

  * New upsream release.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 12 Jun 2013 12:37:59 +0200

galette (0.7.4.1-1) unstable; urgency=low

  * New upstream release.
  * Add /etc/galette/behavior.inc.php to enable
    GALETTE_UNSECURE_PASSWORDS because Squeeze's php-bcrypt doesn't have
    the required support.

 -- Raphaël Hertzog <hertzog@debian.org>  Thu, 02 May 2013 18:56:08 +0200

galette (0.7.4-1) unstable; urgency=low

  * Initial release.
  * Add debian/patches/update-php-minversion to make galette work
    on php 5.3.3 of Debian Squeeze.
  * Install /etc/apache2/conf.d/galette.conf.

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 04 Mar 2013 21:21:34 +0100