@@ -1,8 +1,8 @@
 <?php
 
-// Squeeze doesn't have the required support in php-bcrypt so keep using
-// md5 hashes for now
-define('GALETTE_UNSECURE_PASSWORDS', true);
+// If you backport this package for Squeeze, you have to enable this
+// option because Squeeze doesn't have the required support in php-bcrypt
+// define('GALETTE_UNSECURE_PASSWORDS', true);
 
 // Uncomment if you need debug logs (default level is 5)
 // define('GALETTE_LOG_LVL', 10);
