@@ -1,6 +1,8 @@
 galette (0.7.5-1) unstable; urgency=low
 
   * New upstream release.
+  * Drop GALETTE_UNSECURE_PASSWORDS and increase dependencies to
+    require Wheezy's PHP.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Wed, 21 Aug 2013 11:11:05 +0200
 
